[Helmi] menambahkan register enrollment

--- a/assets/styles/_header.scss
+++ b/assets/styles/_header.scss
@@ -114,6 +114,10 @@ header{
         overflow-x: hidden;
         transition: 0.5s ease-in-out;
 
+        &::-webkit-scrollbar{
+            display: none;
+        }
+
         .row{
             min-height: 100vh;
         }
