--- a/assets/styles/landingPage/_mainContent.scss
+++ b/assets/styles/landingPage/_mainContent.scss
@@ -510,16 +510,6 @@ section{
     }
 }
 
-footer{
-    padding: 15px;
-    background: $primaryColor;
-    color: $Color7;
-    text-align: center;
-    font-weight: bold;
-    font-size: 16px;
-}
-
-
 @media(max-width:992px){
     section{
         .gundarGraduates__join{
@@ -547,7 +537,32 @@ footer{
 
     .gunadarma__icons{
         .gunadarma__icon{
-            margin-top: 90px;
+            margin-top: 130px;
+        }
+    }
+
+    .contact__gunadarma{
+        margin-top: 20px;
+        padding: 20px;
+        background: $Color6;
+    
+        h5{
+            color: $primaryColor
+        }
+    
+        .location {
+            p {
+                font-size: 13px;
+            }
+    
+            a{
+                color: $Color3;
+                font-size: 15px;
+            }
+        }
+    
+        .link{
+            margin: 20px;
         }
     }
 }
@@ -619,9 +634,5 @@ footer{
             margin-top: 150px;
         }
 
-    }
-
-    footer{
-        font-size: 12px;
     }
 }
