--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -1,90 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Poppins:wght@400;500;600;700&display=swap");
-.glide {
-  position: relative;
-  width: 100%;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-}
-
-.glide * {
-  -webkit-box-sizing: inherit;
-          box-sizing: inherit;
-}
-
-.glide__track {
-  overflow: hidden;
-}
-
-.glide__slides {
-  position: relative;
-  width: 100%;
-  list-style: none;
-  -webkit-backface-visibility: hidden;
-          backface-visibility: hidden;
-  -webkit-transform-style: preserve-3d;
-          transform-style: preserve-3d;
-  -ms-touch-action: pan-Y;
-      touch-action: pan-Y;
-  overflow: hidden;
-  padding: 0;
-  white-space: nowrap;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: nowrap;
-      flex-wrap: nowrap;
-  will-change: transform;
-}
-
-.glide__slides--dragging {
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-}
-
-.glide__slide {
-  width: 100%;
-  height: 100%;
-  -ms-flex-negative: 0;
-      flex-shrink: 0;
-  white-space: normal;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-  -webkit-touch-callout: none;
-  -webkit-tap-highlight-color: transparent;
-}
-
-.glide__slide a {
-  -webkit-user-select: none;
-          user-select: none;
-  -webkit-user-drag: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-}
-
-.glide__arrows {
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-}
-
-.glide__bullets {
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-}
-
-.glide--rtl {
-  direction: rtl;
-}
-
 header .info-gundar {
   background: #885A89;
   padding: 22px 80px 22px 0;
@@ -220,6 +134,10 @@ header .sidebar {
   overflow-x: hidden;
   -webkit-transition: 0.5s ease-in-out;
   transition: 0.5s ease-in-out;
+}
+
+header .sidebar::-webkit-scrollbar {
+  display: none;
 }
 
 header .sidebar .row {
@@ -584,6 +502,55 @@ header .sidebar .sidebar__right {
   font-weight: bold;
 }
 
+.jumbotron__studentEnrollment {
+  background: #E8E8E8;
+}
+
+.jumbotron__studentEnrollment .row > * {
+  padding: 0;
+}
+
+.jumbotron__studentEnrollment .jumbotron__breadcrumb, .jumbotron__studentEnrollment .jumbotron__preview {
+  padding: 40px 50px;
+}
+
+.jumbotron__studentEnrollment .jumbotron__preview h2 {
+  color: #885A89;
+  font-size: 40px;
+  font-weight: 500;
+}
+
+.jumbotron__studentEnrollment .jumbotron__preview h5 {
+  font-size: 18px;
+}
+
+.jumbotron__studentEnrollment .jumbotron__preview p {
+  font-size: 15px;
+  text-align: justify;
+}
+
+.jumbotron__studentEnrollment .jumbotron__image-preview {
+  background: ivory;
+  -webkit-clip-path: polygon(0% 100%, 97% 100%, 100% 0%, 26% 0, 0 78%);
+          clip-path: polygon(0% 100%, 97% 100%, 100% 0%, 26% 0, 0 78%);
+  height: 100%;
+}
+
+.jumbotron__studentEnrollment .jumbotron__image-preview .jumbotron__boxImg {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  z-index: 1;
+  background-color: #E8E8E8;
+}
+
+.jumbotron__studentEnrollment .jumbotron__image-preview .jumbotron__boxImg img {
+  width: inherit;
+  height: inherit;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
 @media (max-width: 576px) {
   .jumbotron {
     margin-top: -12px;
@@ -612,6 +579,11 @@ header .sidebar .sidebar__right {
   }
   .jumbotron .jumbotron__content .jumbotron__button .secondary__button {
     padding: 9px;
+  }
+  .jumbotron__studentEnrollment .jumbotron__image-preview {
+    -webkit-clip-path: none;
+            clip-path: none;
+    height: 100%;
   }
 }
 
@@ -1110,15 +1082,6 @@ section .gundarGraduates__join .join__container .container .primary__button {
   font-size: 15px;
 }
 
-footer {
-  padding: 15px;
-  background: #885A89;
-  color: #FFF;
-  text-align: center;
-  font-weight: bold;
-  font-size: 16px;
-}
-
 @media (max-width: 992px) {
   section .gundarGraduates__join .join__container .container {
     top: 20px;
@@ -1135,7 +1098,25 @@ footer {
     margin-top: 10px;
   }
   .gunadarma__icons .gunadarma__icon {
-    margin-top: 90px;
+    margin-top: 130px;
+  }
+  .contact__gunadarma {
+    margin-top: 20px;
+    padding: 20px;
+    background: #F4F4F4;
+  }
+  .contact__gunadarma h5 {
+    color: #885A89;
+  }
+  .contact__gunadarma .location p {
+    font-size: 13px;
+  }
+  .contact__gunadarma .location a {
+    color: #EF7B39;
+    font-size: 15px;
+  }
+  .contact__gunadarma .link {
+    margin: 20px;
   }
 }
 
@@ -1184,9 +1165,109 @@ footer {
   .gunadarma__icons .gunadarma__icon {
     margin-top: 150px;
   }
-  footer {
-    font-size: 12px;
-  }
+}
+
+.icons {
+  background: #F4F4F4;
+  padding: 40px;
+}
+
+.icons .icons__header {
+  text-align: center;
+  margin-bottom: 32px;
+}
+
+.icons .container {
+  padding: 0;
+}
+
+.icons .container .gunadarma__icon {
+  text-align: center;
+}
+
+.icons .container .gunadarma__icon .content {
+  text-align: justify;
+}
+
+.icons .container .gunadarma__icon .content p:nth-child(1) {
+  color: #885A89;
+  font-size: 18px;
+  text-align: center;
+}
+
+.icons .container .gunadarma__icon .content p:nth-child(2) {
+  font-weight: lighter;
+  font-size: 16px;
+}
+
+.aplicationManagement {
+  width: 90%;
+  margin: 15px auto;
+  text-align: center;
+  min-height: 0;
+}
+
+.aplicationManagement .app__header {
+  margin-top: 20px;
+}
+
+.aplicationManagement .app__header h2 {
+  color: #D1B590;
+  font-size: 24px;
+  font-weight: bold;
+  font-family: 'Playfair Display', sans-serif;
+}
+
+.aplicationManagement .app__header h2::after {
+  content: "";
+  display: block;
+  width: 16%;
+  margin: 20px auto;
+  border-bottom: 2px solid #E3E3E3;
+}
+
+.aplicationManagement .app__header h4 {
+  font-size: 30px;
+  margin-bottom: 15px;
+  color: #885A89;
+}
+
+.aplicationManagement .app__content {
+  margin-top: 40px;
+  text-align: left;
+}
+
+.aplicationManagement .app__content .app__table h5 {
+  font-weight: bold;
+}
+
+.aplicationManagement .app__content .app__table .table__app {
+  padding: 8px 16px;
+  width: 100%;
+  background: #885A89;
+}
+
+.aplicationManagement .app__content .app__table .table__app p {
+  margin: auto;
+  color: #FFF;
+  font-weight: bold;
+}
+
+.aplicationManagement .app__content .app__table .app__button {
+  margin-top: 20px;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.aplicationManagement .app__content .app__table .app__button a {
+  text-decoration: none;
+  background-color: #EF7B39;
+  color: #FFF;
+  font-weight: bold;
+  font-size: 14px;
+  border-radius: 7px;
+  padding: 10px 40px;
+  margin-right: 20px;
 }
 
 * {
@@ -1197,7 +1278,134 @@ footer {
   font-family: "Poppins", sans-serif;
 }
 
-body {
-  height: 3000px;
+html::-webkit-scrollbar {
+  display: none;
+}
+
+.contact__gunadarma {
+  margin-top: 20px;
+  padding: 20px;
+  background: #F4F4F4;
+}
+
+.contact__gunadarma h5 {
+  color: #885A89;
+}
+
+.contact__gunadarma .location p {
+  font-size: 13px;
+}
+
+.contact__gunadarma .location a {
+  color: #EF7B39;
+  font-size: 15px;
+}
+
+.contact__gunadarma .link .link__content ul {
+  list-style-type: square;
+}
+
+.contact__gunadarma .link .link__content ul li {
+  margin: 10px 0;
+}
+
+.contact__gunadarma .link .link__content ul li::marker {
+  color: #8AA7A2;
+}
+
+.contact__gunadarma .link .link__content ul li a {
+  text-decoration: none;
+  position: relative;
+}
+
+.contact__gunadarma .link .link__content ul li a::after {
+  content: url("./../images/icons/foreign.png");
+  width: 15px;
+  height: 15px;
+  position: absolute;
+  top: -5px;
+  margin-left: 8px;
+  -webkit-filter: invert(100);
+          filter: invert(100);
+}
+
+.contact__gunadarma .email__gundar {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+}
+
+.contact__gunadarma .email__gundar .email__boxImg {
+  width: 50px;
+  height: 50px;
+  margin-right: 25px;
+}
+
+.contact__gunadarma .email__gundar .email__boxImg img {
+  width: inherit;
+  height: inherit;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+.contact__gunadarma .telephone__gundar {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+}
+
+.contact__gunadarma .telephone__gundar .telephone__boxImg {
+  width: 50px;
+  height: 50px;
+  margin-right: 25px;
+}
+
+.contact__gunadarma .telephone__gundar .telephone__boxImg img {
+  width: inherit;
+  height: inherit;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+@media (max-width: 992px) {
+  .contact__gunadarma {
+    margin-top: 20px;
+    padding: 20px;
+    background: #F4F4F4;
+  }
+  .contact__gunadarma h5 {
+    color: #885A89;
+  }
+  .contact__gunadarma .location p {
+    font-size: 13px;
+  }
+  .contact__gunadarma .location a {
+    color: #EF7B39;
+    font-size: 15px;
+  }
+  .contact__gunadarma .link {
+    margin: 20px;
+  }
+}
+
+footer {
+  padding: 15px;
+  background: #885A89;
+  color: #FFF;
+  text-align: center;
+  font-weight: bold;
+  font-size: 16px;
+}
+
+@media (max-width: 576px) {
+  footer {
+    font-size: 12px;
+  }
 }
 /*# sourceMappingURL=styles.css.map */
