--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -6,8 +6,10 @@
 }
 @import "./variables";
 @import "./header";
-@import "./landingPage/jumbotron";
+@import "./jumbotron";
 @import "./landingPage/mainContent";
+@import "./templateIcon";
+@import "./enrollment/enrollment";
 
 *{
     margin: 0;
@@ -15,6 +17,12 @@
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
 }
+
+html::-webkit-scrollbar{
+    display: none
+}
+@import "./contact";
+@import "./footer";
 
 
 
