--- a/assets/styles/landingPage/_mainContent.scss
+++ b/assets/styles/landingPage/_mainContent.scss
@@ -510,11 +510,11 @@ section{
     }
 }
 
-@media(max-width:1600px){
-    .gunadarma__icons{
-        margin-top: -5%;
-    }
-}
+// @media(max-width:1600px){
+//     .gunadarma__icons{
+//         margin-top: -5%;
+//     }
+// }
 
 @media(max-width:992px){
     section{
