--- a/assets/styles/landingPage/_mainContent.scss
+++ b/assets/styles/landingPage/_mainContent.scss
@@ -493,7 +493,7 @@ section{
     width: 100%;
     min-height: 450px;
     background-color: $Color6;
-    margin-top: -10%;
+    margin-top: -15%;
 
     .gunadarma__icon{
         text-align: center;
@@ -510,11 +510,11 @@ section{
     }
 }
 
-// @media(max-width:1600px){
-//     .gunadarma__icons{
-//         margin-top: -5%;
-//     }
-// }
+@media(max-width:1600px){
+    .gunadarma__icons{
+        margin-top: -5%;
+    }
+}
 
 @media(max-width:992px){
     section{
