--- a/assets/styles/enrollment/_enrollment.scss
+++ b/assets/styles/enrollment/_enrollment.scss
@@ -204,6 +204,11 @@
 
         .primary__button{
             @include primaryButton();
+
+            a{
+                text-decoration: none;
+                color: $Color7;
+            }
         }
 
         .secondary__button{
@@ -305,6 +310,15 @@
                 display: block;
                 width: 100%;
                 border-bottom: 1px solid $Color12;
+                margin-top: 4px;
+            }
+
+            &::before{
+                content: url($urlIcon1);
+                width: 100%; 
+                margin-right: 10px;   
+                // height: 100%;
+                // background-image: url($urlIcon1);
             }
         }
     }
